
using UnityEngine;

public class AnimationString
{

    /*
     * Player
    */
    internal static readonly string isRunning = "isRunning";
    internal static readonly string isFlying = "isFlying";
    internal static readonly string isDead = "isDead";
    internal static readonly string isComplytelyDead = "isComplytelyDead";


    /*
     * Effect
    */
    internal static readonly string isOn = "isOn";


}
